Card update refactor
