# docs/openapi.yaml
@@ -94,36 +94,12 @@ paths:
           description: "User deleted successfully"
         "404":
           description: "User not found"
-  /api/v1/cards/{id}:
-    get:
-      tags:
-      - "Cards"
-      summary: "Get card by ID"
-      description: "Retrieve a card by their ID"
-      operationId: "getOne"
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "integer"
-          format: "int64"
-      responses:
-        "200":
-          description: "Card found"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/CardDto"
-        "404":
-          description: "Card not found"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/CardDto"
+  /api/v1/cards/{id}/status:
     put:
       tags:
       - "Cards"
+      summary: "Update card status"
+      description: "Update card status"
       operationId: "update"
       parameters:
       - name: "id"
@@ -136,11 +112,50 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CardUpdateDto"
+              $ref: "#/components/schemas/CardStatusUpdateDto"
         required: true
       responses:
         "200":
-          description: "OK"
+          description: "Card status updated successfully"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+        "404":
+          description: "Card not found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+  /api/v1/cards/{id}/balance:
+    put:
+      tags:
+      - "Cards"
+      summary: "Update card balance"
+      description: "Update card balance"
+      operationId: "update_1"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "integer"
+          format: "int64"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CardBalanceUpdateDto"
+        required: true
+      responses:
+        "200":
+          description: "Card balance updated successfully"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+        "404":
+          description: "Card not found"
           content:
             '*/*':
               schema:
@@ -295,6 +310,51 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/CardDto"
+  /api/v1/cards/{id}:
+    get:
+      tags:
+      - "Cards"
+      summary: "Get card by ID"
+      description: "Retrieve a card by their ID"
+      operationId: "getOne"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "Card found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+        "404":
+          description: "Card not found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+    delete:
+      tags:
+      - "Cards"
+      summary: "Delete card"
+      description: "Delete a card by ID"
+      operationId: "delete_1"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "integer"
+          format: "int64"
+      responses:
+        "204":
+          description: "Card deleted successfully"
+        "404":
+          description: "Card not found"
 components:
   schemas:
     UserDto:
@@ -314,7 +374,7 @@ components:
           enum:
           - "USER"
           - "ADMIN"
-    CardUpdateDto:
+    CardStatusUpdateDto:
       type: "object"
       properties:
         status:
@@ -323,8 +383,8 @@ components:
           - "ACTIVE"
           - "BLOCKED"
           - "EXPIRED"
-        balance:
-          type: "number"
+      required:
+      - "status"
     CardDto:
       type: "object"
       properties:
@@ -342,6 +402,11 @@ components:
           - "ACTIVE"
           - "BLOCKED"
           - "EXPIRED"
+        balance:
+          type: "number"
+    CardBalanceUpdateDto:
+      type: "object"
+      properties:
         balance:
           type: "number"
     UserCreateDto:
